[gd_scene load_steps=86 format=3 uid="uid://cf4mwma8gdy7n"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_38w7o"]
[ext_resource type="Texture2D" uid="uid://b25ut75nqnjnc" path="res://Assets/Mobs/Cactus/Cactus Back Sheet.png" id="2_qkng1"]
[ext_resource type="Texture2D" uid="uid://cy3gp0r2jdlxp" path="res://Assets/Mobs/Cactus/Cactus Front Sheet.png" id="3_sltti"]
[ext_resource type="Texture2D" uid="uid://wqxvh25s02bl" path="res://Assets/Mobs/Cactus/Cactus Side Sheet.png" id="4_m4oud"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ccxq4"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_uhnv0"]
atlas = ExtResource("2_qkng1")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qxbm"]
atlas = ExtResource("2_qkng1")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_estvd"]
atlas = ExtResource("2_qkng1")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_abl47"]
atlas = ExtResource("2_qkng1")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbqlf"]
atlas = ExtResource("2_qkng1")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu85e"]
atlas = ExtResource("2_qkng1")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivivs"]
atlas = ExtResource("2_qkng1")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2i6j"]
atlas = ExtResource("2_qkng1")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhxb6"]
atlas = ExtResource("2_qkng1")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_irwf2"]
atlas = ExtResource("2_qkng1")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbn88"]
atlas = ExtResource("2_qkng1")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbto5"]
atlas = ExtResource("3_sltti")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_whmp8"]
atlas = ExtResource("3_sltti")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xqaw"]
atlas = ExtResource("3_sltti")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrh6y"]
atlas = ExtResource("3_sltti")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca1ov"]
atlas = ExtResource("3_sltti")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ahfd"]
atlas = ExtResource("3_sltti")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vihfw"]
atlas = ExtResource("3_sltti")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql14m"]
atlas = ExtResource("3_sltti")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcsgm"]
atlas = ExtResource("3_sltti")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oetvx"]
atlas = ExtResource("3_sltti")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqfkr"]
atlas = ExtResource("3_sltti")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6upx"]
atlas = ExtResource("4_m4oud")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljesj"]
atlas = ExtResource("4_m4oud")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_in0pt"]
atlas = ExtResource("4_m4oud")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1axn"]
atlas = ExtResource("4_m4oud")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uemy"]
atlas = ExtResource("4_m4oud")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8owj"]
atlas = ExtResource("4_m4oud")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qg6q"]
atlas = ExtResource("4_m4oud")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yga7s"]
atlas = ExtResource("4_m4oud")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo8pu"]
atlas = ExtResource("4_m4oud")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea7wy"]
atlas = ExtResource("4_m4oud")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2qp6"]
atlas = ExtResource("4_m4oud")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eoma"]
atlas = ExtResource("3_sltti")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl3p7"]
atlas = ExtResource("3_sltti")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxogg"]
atlas = ExtResource("2_qkng1")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_puo8n"]
atlas = ExtResource("2_qkng1")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nx75"]
atlas = ExtResource("2_qkng1")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj62q"]
atlas = ExtResource("2_qkng1")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvi7a"]
atlas = ExtResource("3_sltti")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_racb4"]
atlas = ExtResource("3_sltti")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhbqa"]
atlas = ExtResource("3_sltti")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvxdb"]
atlas = ExtResource("3_sltti")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti6pp"]
atlas = ExtResource("4_m4oud")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wuur"]
atlas = ExtResource("4_m4oud")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_47mio"]
atlas = ExtResource("4_m4oud")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmplg"]
atlas = ExtResource("4_m4oud")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kqcr"]
atlas = ExtResource("2_qkng1")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_evjs0"]
atlas = ExtResource("2_qkng1")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hhe3"]
atlas = ExtResource("2_qkng1")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwwtk"]
atlas = ExtResource("2_qkng1")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubf8q"]
atlas = ExtResource("2_qkng1")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0kgw"]
atlas = ExtResource("2_qkng1")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg054"]
atlas = ExtResource("2_qkng1")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry168"]
atlas = ExtResource("2_qkng1")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_manm0"]
atlas = ExtResource("2_qkng1")
region = Rect2(320, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhobw"]
atlas = ExtResource("2_qkng1")
region = Rect2(360, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hglm8"]
atlas = ExtResource("3_sltti")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w72uj"]
atlas = ExtResource("3_sltti")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4367l"]
atlas = ExtResource("3_sltti")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeifo"]
atlas = ExtResource("3_sltti")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkajy"]
atlas = ExtResource("3_sltti")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_as37p"]
atlas = ExtResource("3_sltti")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6dys"]
atlas = ExtResource("3_sltti")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5pte"]
atlas = ExtResource("3_sltti")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxmaj"]
atlas = ExtResource("3_sltti")
region = Rect2(320, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1blk0"]
atlas = ExtResource("3_sltti")
region = Rect2(360, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66fh"]
atlas = ExtResource("4_m4oud")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dc6d"]
atlas = ExtResource("4_m4oud")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y07kd"]
atlas = ExtResource("4_m4oud")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd4wi"]
atlas = ExtResource("4_m4oud")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k14qs"]
atlas = ExtResource("4_m4oud")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_idc4d"]
atlas = ExtResource("4_m4oud")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yq84"]
atlas = ExtResource("4_m4oud")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4hny"]
atlas = ExtResource("4_m4oud")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k335"]
atlas = ExtResource("4_m4oud")
region = Rect2(320, 40, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_a07r0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhnv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qxbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abl47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbqlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu85e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivivs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2i6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhxb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irwf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbn88")
}],
"loop": false,
"name": &"attack_back",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbto5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whmp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xqaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrh6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca1ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ahfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vihfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql14m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcsgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oetvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqfkr")
}],
"loop": false,
"name": &"attack_front",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6upx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljesj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in0pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1axn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uemy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8owj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qg6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yga7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo8pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea7wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2qp6")
}],
"loop": false,
"name": &"attack_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eoma")
}],
"loop": false,
"name": &"death_front",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl3p7")
}],
"loop": false,
"name": &"hit_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxogg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puo8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nx75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj62q")
}],
"loop": true,
"name": &"idle_back",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvi7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_racb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhbqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvxdb")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti6pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wuur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47mio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmplg")
}],
"loop": true,
"name": &"idle_side",
"speed": 6.0
}, {
"frames": [],
"loop": true,
"name": &"walk_angleDown",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_angleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kqcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evjs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hhe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwwtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubf8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0kgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg054")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry168")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_manm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhobw")
}],
"loop": true,
"name": &"walk_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hglm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w72uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4367l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeifo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkajy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as37p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6dys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5pte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxmaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1blk0")
}],
"loop": true,
"name": &"walk_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dc6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y07kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd4wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k14qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idc4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yq84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4hny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k335")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_fyg0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_83uw8"]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phj55"]
_data = {
"RESET": SubResource("Animation_fyg0e"),
"damaged": SubResource("Animation_83uw8")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
collision_layer = 4
collision_mask = 7
script = ExtResource("1_38w7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ccxq4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a07r0")
animation = &"attack_back"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_phj55")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
